bk_ida/gccida/c0/subreg_regno_offset
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subreg_regno_offset/src/rtlanal.c:3484:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode xmode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subreg_regno_offset/src/rtlanal.c:3486:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode ymode) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subreg_regno_offset/src/rtlanal.c:3552:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[xmode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subreg_regno_offset/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subreg_regno_offset/src/rtlanal.c:3553:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v24 = mode_class_0[xmode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subreg_regno_offset/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subreg_regno_offset/src/rtlanal.c:3597:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[ymode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subreg_regno_offset/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subreg_regno_offset/src/rtlanal.c:3598:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v20 = mode_class_0[ymode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subreg_regno_offset/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subreg_regno_offset/src/obj/rtlanal.o] Error 1
